--- a/css/app.css
+++ b/css/app.css
@@ -63,11 +63,15 @@ h1 {
     justify-content: center;
     align-items: center;
     box-shadow: 5px 2px 20px 0 rgba(46, 61, 73, 0.5);
+    transition: all 0.5s ease-in-out;
+   /* backface-visibility: hidden;*/
 }
 
+
 .deck .card.open {
-    transform: rotateY(0);
-    background: #02b3e4;
+    transform: rotateY(180deg);
+    background: #02ccba;
+    font-size: 33px;
     cursor: default;
 }
 
@@ -77,7 +81,7 @@ h1 {
 
 .deck .card.match {
     cursor: default;
-    background: #02ccba;
+    background: #59af60;
     font-size: 33px;
 }
 
@@ -106,4 +110,19 @@ h1 {
 .score-panel .restart {
     float: right;
     cursor: pointer;
+}
+
+.green{
+    color: #98e653;
+    font-size: 1.2em;
+}
+
+
+
+.tail{
+ 
+
+}
+.head {
+
 }
